--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body { margin:0; }
   .container {
     margin-left: 5%;
     margin-right: 5%;
-    margin-bottom: 5%;;
+    margin-bottom: 5%;
     bottom: 0%;
     display: flex;    
     overflow-x: auto;
