--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body { margin:0; }
   .Icons{
     margin: 2.5%;
     width: 20%;
-    height: 20%;
+/*     height: 20%; */
   }
 img:not(.Icons){
   display: none !important;
