--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { margin:0; }
-#map { position: absolute; top: 0; bottom: 0; width: 100%; height: 100%;}
+#map { position: absolute; top: 0; bottom: 0; width: 500px; height: 500px;}
 /* #menu {
   height: 100%;
   width: 10%;
