--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { margin:0; }
-#map { z-index: -1; position: absolute; top: 0; bottom: 0; width: 100vw; height: 100vh;}
+#map { position: absolute; top: 0; bottom: 0; width: 100vw; height: 100vh;}
 /* #menu {
   height: 100%;
   width: 10%;
@@ -103,7 +103,7 @@ h1,p{
   margin-block-start: 3%;
   margin-block-end: 3%;
 
-  font-size: 150%;
+
 }
 
 .getdirection{
