--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ border-top-left-radius: 10%;
 }
 h1,p{
   
-  font-family: 'Fredoka One', cursive;
+  font-family: 'Anton', sans-serif;
   
   color: white;
    
@@ -111,7 +111,7 @@ h1,p{
 
 .getdirection{
   
-  font-family: 'Fredoka One', cursive;
+  font-family: 'Anton', sans-serif;
   
   border-radius: 30px;
   
