--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body { margin:0; }
+body { z-index: -2; margin:0; }
 #map { position: absolute; top: 0; bottom: 0; width: 100vw; height: 100vh;}
 /* #menu {
   height: 100%;
@@ -74,7 +74,7 @@ border-top-left-radius: 10%;
   position: fixed;
   bottom: 0;
   
-  width: 100vw;
+  width: 100%;
 
 
   display: flex;
@@ -97,27 +97,26 @@ border-top-left-radius: 10%;
   
 }
 h1,p{
-  
-  font-family: 'Anton', sans-serif;
-  
   color: white;
    
 
   margin-block-start: 3%;
   margin-block-end: 3%;
 
-
+  
 }
 
 .getdirection{
   
-  font-family: 'Anton', sans-serif;
-  
-  border-radius: 30px;
+  border-style: none;
+  border-radius: 20px;
   
   background-color: turquoise;
   width: 90%;
   bottom: 0%;
   margin-bottom: 5%;
   margin-top: 10%;
+}
+:focus{
+  outline: none;
 }
