--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ body { z-index: -2; margin:0; }
   }
 
   .Icons{
-    margin: 0%;
-    width: 25%;
-    height: 25%;
+    margin: 2.5%;
+    width: 20%;
+    height: 20%;
   }
 
 /* img:not(.Icons, .menu){
@@ -47,7 +47,7 @@ a{
   position: fixed;
   top: auto;
   left: 0;
-  width: 20%;
+  width: 15%;
   height: auto;
   margin: 5%;
 
@@ -57,7 +57,7 @@ a{
   position: fixed;
   top: auto;
   right: 0;
-  width: 20%;
+  width: 15%;
   height: auto;
   margin: 5%;
 
@@ -133,3 +133,22 @@ h1,p, h2{
   outline: none;
   
 }
+
+
+div .Pharmacy_marker {
+  background-image: url('https://haykbaghdasarian.github.io/pharmacy.jpg');
+  background-size: cover;
+  width: 2cm;
+  height: 2cm;
+  border-radius: 50%;
+  cursor: pointer;
+  }
+
+  div .Burger_marker {
+    background-image: url('https://i.pinimg.com/564x/25/40/5e/25405e98120bb53d432ac04e1415dca0.jpg');
+    background-size: cover;
+    width: 2cm;
+    height: 2cm;
+    border-radius: 50%;
+    cursor: pointer;
+    }
