--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a{
 }
 
 
-.bottom1{
+#panel{
   align-content: center;
   z-index: 23;
   background: #28293b;
@@ -77,7 +77,7 @@ border-top-left-radius: 10%;
   width: 100%;
 
 
-  display: flex;
+  display: none;
   flex-flow: column nowrap;
 
   align-items: center; /* aligns on horizontal for column */
