--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body { z-index: -2; margin:0; }
+body { z-index: -2; margin:0; font-family: 'Josefin Sans', sans-serif;}
 #map { position: absolute; top: 0; bottom: 0; width: 100vw; height: 100vh;}
 /* #menu {
   height: 100%;
@@ -84,11 +84,32 @@ border-top-left-radius: 10%;
 
 
 }
+
+#panel_up{
+  align-content: center;
+  z-index: 23;
+
+background: #f6f6f4;
+border-bottom-right-radius: 10%;
+border-bottom-left-radius: 10%;
+  position: fixed;
+  top: 0;
+  
+  width: 100%;
+
+
+  display: flex;
+  flex-flow: column nowrap;
+
+  align-items: center; /* aligns on horizontal for column */
+
+
+}
 .imgmgmg{
   border-radius: 100%;
   
   border-style: solid;
-  border-width: 5px;
+  border-width: 12px;
   border-color: white;
 
   width: 20%;
