--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ border-top-left-radius: 10%;
   z-index: 23;
 
 background: #f6f6f4;
-border-bottom-right-radius: 10%;
-border-bottom-left-radius: 10%;
+border-bottom-right-radius: 34px;
+border-bottom-left-radius: 34px;
   position: fixed;
   top: 0;
   
@@ -106,14 +106,16 @@ border-bottom-left-radius: 10%;
 
 }
 
-input,select{
-  margin:5%;
+#name,select{
+  margin-top:1%;
   background-color: rgb(79, 79, 255);
   border: none;
-  border-radius: 12px;
-  width: 100%;
-  color: white;
+  border-radius: 10px;
   
+  color: white;
+  width: 90vw;
+  height: 5vh;
+  font-family: 'Josefin Sans', sans-serif;
   
   
 
@@ -122,22 +124,34 @@ input,select{
 
 }
 
+#workhour{
+  margin-top:1%;
+  background-color: rgb(79, 79, 255);
+  border: none;
+  border-radius: 10px;
+  
+  color: white;
+  width: 44.8vw;
+  height: 5vh;
+  font-family: 'Josefin Sans', sans-serif;
+  
+}
 
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: white;
   opacity: 1; /* Firefox */
-  
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
   color: white;
-  
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 ::-ms-input-placeholder { /* Microsoft Edge */
   color: white;
-  
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 .imgmgmg{
