--- a/style.css
+++ b/style.css
@@ -1,19 +1,12 @@
 body { z-index: -2; margin:0; font-family: 'Josefin Sans', sans-serif;}
 #map { position: absolute; top: 0; bottom: 0; width: 100vw; height: 100vh;}
-/* #menu {
-  height: 100%;
-  width: 10%;
-  position: absolute;
-  background: aqua;
-  padding: 5%;
-  font-family: 'Open Sans', sans-serif;
-  } */
+
 
   .container {
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: 5%;
-    bottom: 0%;
+    top: 0%;
     display: flex;    
     overflow-x: auto;
     position: absolute;
@@ -21,9 +14,9 @@ body { z-index: -2; margin:0; font-family: 'Josefin Sans', sans-serif;}
   }
 
   .Icons{
-    margin: 0%;
-    width: 25%;
-    height: 25%;
+    margin: 2.5%;
+    width: 20%;
+    height: 20%;
   }
 
 /* img:not(.Icons, .menu){
@@ -64,26 +57,6 @@ a{
 }
 
 
-#panel{
-  align-content: center;
-  z-index: 23;
-  background: #28293b;
-background: linear-gradient(0deg, rgba(45,46,61,1) 0%, rgba(70,74,107,1) 100%);
-border-top-right-radius: 10%;
-border-top-left-radius: 10%;
-  position: fixed;
-  bottom: 0;
-  
-  width: 100%;
-
-
-  display: none;
-  flex-flow: column nowrap;
-
-  align-items: center; /* aligns on horizontal for column */
-
-
-}
 
 
 
@@ -110,20 +83,7 @@ h1,p, h2{
   
 }
 
-.getdirection{
-  
-  border-style: none;
-  border-radius: 100px;
-  
-  background-color: turquoise;
-  width: 80%;
-  bottom: 0%;
 
-  margin-bottom: 5%;
-  margin-top: 10%;
-  padding: 2%;
-
-}
 
 
 
@@ -138,7 +98,7 @@ h1,p, h2{
 }
 
 
-div .Pharmacy_marker {
+div .Carwash_marker {
   background-image: url('https://haykbaghdasarian.github.io/pharmacy.jpg');
   background-size: cover;
   width: 1cm;
@@ -148,22 +108,4 @@ div .Pharmacy_marker {
   display: none;
   }
 
-  div .Burger_marker {
-    background-image: url('https://i.pinimg.com/564x/25/40/5e/25405e98120bb53d432ac04e1415dca0.jpg');
-    background-size: cover;
-    width: 1cm;
-    height: 1cm;
-    border-radius: 50%;
-    cursor: pointer;
-    display: none;
-    }
-
-    div .Joystick_marker {
-      background-image: url('https://i.pinimg.com/564x/bd/be/66/bdbe6652ac1fa6d248bfb601c5d92f31.jpg');
-      background-size: cover;
-      width: 1cm;
-      height: 1cm;
-      border-radius: 50%;
-      cursor: pointer;
-      display: none;
-      }
+}
