--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ h1,p, h2{
 
 
 div .Carwash_marker {
-  background-image: url('https://haykbaghdasarian.github.io/pharmacy.jpg');
+  background-image: url('HaykBaghdasarian.github.io/carwash.png');
   background-size: cover;
   width: 1cm;
   height: 1cm;
