--- a/style.css
+++ b/style.css
@@ -1,121 +1,437 @@
-body { z-index: -2; margin:0; font-family: 'Josefin Sans', sans-serif;}
-#map { position: absolute; top: 0; bottom: 0; width: 100vw; height: 100vh;}
+/* Google Font Import - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 
+:root{
+    /* ===== Colors ===== */
+    --body-color: #E4E9F7;
+    --sidebar-color: #FFF;
+    --primary-color: #64B078;
+    --primary-color-light: #F6F5FF;
+    --toggle-color: #DDD;
+    --text-color: #707070;
 
-  .container {
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 5%;
-    top: 0%;
-    display: flex;    
-    overflow-x: auto;
+    /* ====== Transition ====== */
+    --tran-03: all 0.2s ease;
+    --tran-03: all 0.3s ease;
+    --tran-04: all 0.3s ease;
+    --tran-05: all 0.3s ease;
+}
+
+body{
+    min-height: 100vh;
+    background-color: var(--body-color);
+    transition: var(--tran-05);
+}
+
+::selection{
+    background-color: var(--primary-color);
+    color: #fff;
+}
+
+body.dark{
+    --body-color: #18191a;
+    --sidebar-color: #242526;
+    --primary-color: #3a3b3c;
+    --primary-color-light: #3a3b3c;
+    --toggle-color: #fff;
+    --text-color: #ccc;
+}
+
+/* ===== Sidebar ===== */
+ .sidebar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 250px;
+    padding: 10px 14px;
+    background: var(--sidebar-color);
+    transition: var(--tran-05);
+    z-index: 100;  
+    box-shadow: 5px 5px 20px lightgray;
+}
+.sidebar.close{
+    width: 88px;
+}
+
+/* ===== Reusable code - Here ===== */
+.sidebar li{
+    height: 50px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.sidebar header .image,
+.sidebar .icon{
+    min-width: 60px;
+    border-radius: 6px;
+}
+
+.sidebar .icon{
+    min-width: 60px;
+    border-radius: 6px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.sidebar .text,
+.sidebar .icon{
+    color: var(--text-color);
+    transition: var(--tran-03);
+}
+
+.sidebar .text{
+    font-size: 17px;
+    font-weight: 500;
+    white-space: nowrap;
+    opacity: 1;
+}
+.sidebar.close .text{
+    opacity: 0;
+}
+/* =========================== */
+
+.sidebar header{
+    position: relative;
+}
+
+.sidebar header .image-text{
+    display: flex;
+    align-items: center;
+}
+.sidebar header .logo-text{
+    display: flex;
+    flex-direction: column;
+}
+header .image-text .name {
+    margin-top: 2px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+header .image-text .profession{
+    font-size: 16px;
+    margin-top: -2px;
+    display: block;
+}
+
+.sidebar header .image{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar header .image img{
+    width: 40px;
+    border-radius: 6px;
+}
+
+.sidebar header .toggle{
     position: absolute;
-    border-radius: 30%;
-  }
-
-  .Icons{
-    margin: 2.5%;
-    width: 20%;
-    height: 20%;
-  }
-
-/* img:not(.Icons, .menu){
-  display: none !important;
-} */
-
-
-
-.mapboxgl-ctrl-logo {
-  display: none !important;
+    top: 50%;
+    right: -25px;
+    transform: translateY(-50%) rotate(180deg);
+    height: 25px;
+    width: 25px;
+    background: rgb(103,178,112);
+    background: linear-gradient(180deg, rgba(103,178,112,1) 0%, rgba(76,162,204,1) 100%);
+    color: var(--sidebar-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    cursor: pointer;
+    transition: var(--tran-05);
 }
 
-.mapboxgl-ctrl-attrib.mapboxgl-compact:after {
-  display: none !important;}
-
-a{
-  display: none !important;
+body.dark .sidebar header .toggle{
+    color: var(--text-color);
 }
 
-.left {
-  position: fixed;
-  top: auto;
-  left: 0;
-  width: 15%;
-  height: auto;
-  margin: 5%;
-
+.sidebar.close .toggle{
+    transform: translateY(-50%) rotate(0deg);
 }
 
-.right {
-  position: fixed;
-  top: auto;
-  right: 0;
-  width: 15%;
-  height: auto;
-  margin: 5%;
-
+.sidebar .menu{
+    margin-top: 40px;
 }
 
-#panel {
-  background: red;
-  height: 50vh;
-  position: absolute;
-  z-index: 200;
-  bottom: 0%;
-  border-top-left-radius: 10%;
-  border-top-right-radius: 10%;
-  width: 100%;
-  text-align: center;
-  display: none;
-}
-.swipline {
-  background: black;
-  height: 6px;
-  width: 157px;
-  margin: 1.7vh auto;
+.sidebar li.search-box{
+    border-radius: 6px;
+    background-color: var(--primary-color-light);
+    cursor: pointer;
+    transition: var(--tran-05);
 }
 
-
-.imgmgmg{
-  border-radius: 100%;
-  
-  border-style: solid;
-  border-width: 12px;
-  border-color: white;
-
-  width: 20%;
-
-  margin-top: -10%;
-
-  
-}
-h1,p, h2{
-  color: white;
-   
-
-  margin-block-start: 3%;
-  margin-block-end: 3%;
-
-  
+.sidebar li.search-box input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    background-color: var(--primary-color-light);
+    color: var(--text-color);
+    border-radius: 6px;
+    font-size: 17px;
+    font-weight: 500;
+    transition: var(--tran-05);
 }
 
+.choosed{
+    list-style: none;
+    height: 100%;
+    background: rgb(103,178,112);
+    background: linear-gradient(180deg, rgba(103,178,112,1) 0%, rgba(76,162,204,1) 100%);
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    border-radius: 6px;
+    text-decoration: none;
+    transition: var(--tran-03);
+}
 
+.sidebar li .choose{
+    list-style: none;
+    height: 100%;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    border-radius: 6px;
+    text-decoration: none;
+    transition: var(--tran-03);
+}
 
-:focus{
-  
-  outline: none;
-  
+.sidebar li .choosed .icon,
+.sidebar li .choosed .text{
+    color: var(--sidebar-color);
+}
+.sidebar li .choose .icon,
+.sidebar li .choose .text{
+    color: rgb(103,178,112);
+    color: linear-gradient(180deg, rgba(103,178,112,1) 0%, rgba(76,162,204,1) 100%);
+}
+
+.sidebar li .choose:hover{
+    background: #5aaa9d;
+}
+.sidebar li .choose:hover .icon,
+.sidebar li .choose:hover .text{
+    color: var(--sidebar-color);
+}
+body.dark .sidebar li .choose:hover .icon,
+body.dark .sidebar li .choose:hover .text{
+    color: var(--text-color);
+}
+
+.sidebar .menu-bar{
+    height: calc(100% - 55px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow-y: scroll;
+}
+.menu-bar::-webkit-scrollbar{
+    display: none;
+}
+.sidebar .menu-bar .mode{
+    border-radius: 6px;
+    background-color: var(--primary-color-light);
+    position: relative;
+    transition: var(--tran-05);
+}
+
+.menu-bar .mode .sun-moon{
+    height: 50px;
+    width: 60px;
+}
+
+.mode .sun-moon i{
+    position: absolute;
+}
+.mode .sun-moon i.sun{
+    opacity: 0;
+}
+body.dark .mode .sun-moon i.sun{
+    opacity: 1;
+}
+body.dark .mode .sun-moon i.moon{
+    opacity: 0;
+}
+
+.menu-bar .bottom-content .toggle-switch{
+    position: absolute;
+    right: 0;
+    height: 100%;
+    min-width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    cursor: pointer;
+}
+.toggle-switch .switch{
+    position: relative;
+    height: 22px;
+    width: 40px;
+    border-radius: 25px;
+    background-color: var(--toggle-color);
+    transition: var(--tran-05);
+}
+
+.switch::before{
+    content: '';
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    background-color: var(--sidebar-color);
+    transition: var(--tran-04);
+}
+
+body.dark .switch::before{
+    left: 20px;
+}
+
+body{
+    background-color: white;
+}
+
+.home{
+    position: absolute;
+    top: 0;
+    top: 0;
+    left: 250px;
+    height: 100vh;
+    width: calc(100% - 250px);
+    background-color: white;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.homeheader{
+    width: 95%;
+    height: 8vh;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
+
+.timedate{
+    height: 6vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.filter{
+    background: rgb(103,178,112);
+    background: linear-gradient(180deg, rgba(103,178,112,1) 0%, rgba(76,162,204,1) 100%);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    width: 6vh;
+    justify-content: center;
+    border-radius: 10px;
+    border-width: 0px;
+    cursor: pointer;
+}
+
+.download{
+    background: rgb(103,178,112);
+    background: linear-gradient(180deg, rgba(103,178,112,1) 0%, rgba(76,162,204,1) 100%);   
+    /* height: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    color: white;
+    height: 100%;
+    padding-left: 2vh;
+    padding-right: 2vh;
+    cursor: pointer;
+    border-width: 0px;
+}
+
+.bx-filter-alt  {
+    color: white;
+    font-size: 2.5vh
+}
+
+.datetime{
+    height: 100%;
+    border-radius: 10px;
+    border-width: 0px;
+    box-shadow: 5px 5px 20px lightgray;
+    margin-right: 2vh;
+}
+
+.sidebar.close ~ .home{
+    left: 78px;
+    height: 100vh;
+    width: calc(100% - 78px);
+}
+body.dark .home .text{
+    color: var(--text-color);
+}
+
+.request{
+    background-color: white;
+    width: 95%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 5px 5px 20px lightgray;
+    margin-top: 2vh;
+    padding: 2vh;
+}
+
+.yes{
+    color: #64B078;
+    text-align: right;
+}
+
+.no{
+    color: #941515;
+    text-align: right;
 }
 
 
-div .Carwash_marker {
-  background-image: url('https://haykbaghdasarian.github.io/carwash.png');
-  background-size: cover;
-  width: 1cm;
-  height: 1cm;
-  border-radius: 50%;
-  cursor: pointer;
-  display: none;
-  }
+.name{
+    font-weight: bold;
+}
 
+.yesno{
+    display: flex;
+    flex-direction: row;
+}
+
+.five{
+    height: 100%;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
 }
